First controller test.

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,29 @@
 	<groupId>sti2018.denis_sinkevich</groupId>
 	<artifactId>payments-online</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>war</packaging>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>11</java.version>
+		<testng.version>6.14.3</testng.version>
+		<log4J.version>2.11.1</log4J.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>5.1.2.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
