--- a/src/main/resources/payments.online.properties
+++ b/src/main/resources/payments.online.properties
@@ -1,4 +1,4 @@
-datasource.driver = com.mysql.jdbc.Driver
+datasource.driver = com.mysql.cj.jdbc.Driver
 datasource.url = jdbc:mysql://localhost:3306/payments
 datasource.username = root
 datasource.password = pass
