--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<artifactId>payments-online</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
+	<name>PaymentsOnline</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -85,4 +86,19 @@
 			<version>${log4J.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>tomcatServer</server>
+					<path>/${project.name}</path>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
